# axum-restapi

./: Cargo.toml
migrations/: 20250328123550_user.up.sql
src/: lib.rs  main.rs
src/api/: error.rs  extractor.rs  middleware.rs  mod.rs  server.rs  version.rs
src/api/dto/: auth_dto.rs  mod.rs  user_dto.rs
src/api/handlers/: auth_handlers.rs  error_handlers.rs  mod.rs  root_handlers.rs  user_handlers.rs
src/api/routes/: auth_routes.rs  user_routes.rs
src/application/: app.rs  config.rs  constant.rs  mod.rs  state.rs
src/application/repository/: mod.rs  user_repository.rs
src/application/security/: auth.rs  jwt.rs  mod.rs  password.rs  validator.rs
src/application/service/: token_service.rs
src/domain/entities/: user.rs
src/infra/: mod.rs
src/infra/cache/: cache.rs  mod.rs  option.rs
src/infra/cache/redis/: mod.rs  option.rs  redis.rs
src/infra/database/: database.rs  mod.rs  option.rs
src/infra/database/postgres/: mod.rs  option.rs  postgres.rs
